devtools/tests/should_fail/def_cycle_trans.p
fof(d0, definition, ~d1).
fof(d1, definition, ~d2).
fof(d2, definition, ~d3).
fof(d3, definition, ~d4).
fof(d4, definition, ~d0).
